syntax = "proto3";

option csharp_namespace = "Persistify.Protos.Templates";

enum FieldType {
  Text = 0;
  Number = 1;
  Bool = 2;
}

message Field {
  string FieldName = 1;
  FieldType FieldType = 2;
  bool Required = 3;
}

message Template {
  string TemplateName = 1;
  repeated Field Fields = 2;
}
