syntax = "proto3";

option csharp_namespace = "Persistify.Protos.Documents";

message Document {
  repeated TextField TextFields = 1;
  repeated NumberField NumberFields = 2;
  repeated BoolField BoolFields = 3;
}

message DocumentWithId {
  uint64 Id = 1;
  Document Document = 2;
}

message TextField {
  string FieldName = 1;
  string Value = 2;
}

message NumberField {
  string FieldName = 1;
  double Value = 2;
}

message BoolField {
  string FieldName = 1;
  bool Value = 2;
}

message AndOperator {
  repeated OrOperator OrOperators = 1;
  repeated NotOperator NotOperators = 2;
  repeated FtsQuery FtsQueries = 3;
  repeated NumberQuery NumberQueries = 4;
  repeated BoolQuery BoolQueries = 5;
}

message OrOperator {
  repeated AndOperator AndOperators = 1;
  repeated NotOperator NotOperators = 2;
  repeated FtsQuery FtsQueries = 3;
  repeated NumberQuery NumberQueries = 4;
  repeated BoolQuery BoolQueries = 5;
}

message NotOperator {
  oneof Node {
    AndOperator AndOperator = 1;
    OrOperator OrOperator = 2;
    FtsQuery FtsQuery = 3;
    NumberQuery NumberQuery = 4;
    BoolQuery BoolQuery = 5;
  }
}

message FtsQuery {
  string FieldName = 1;
  string Value = 2;
  bool Exact = 3;
  bool CaseSensitive = 4;
}

message NumberQuery {
  string FieldName = 1;
  double MinValue = 2;
  double MaxValue = 3;
}

message BoolQuery {
  string FieldName = 1;
  bool Value = 2;
}
